# bareun_rs

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: custom_dict.proto  lang_common.proto  language_service.proto  revision_service.proto
proto/bareun/: custom_dict.proto  dict_common.proto  language_service.proto  revision_service.proto
src/: constants.rs  corrector.rs  custom_dict.rs  custom_dict_client.rs  error.rs  lang_service_client.rs  lib.rs  revision_service_client.rs  tagger.rs  tokenizer.rs
tests/: test_tagger.rs  test_tokenizer.rs
