[package]
name = "bareun_rs"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["korean", "nlp", "tokenizer", "analyzer"]
categories = ["natural-language-processing", "text-processing"]
description = "Bareun is a Korean Morphological analyzer for Rust"
build = "build.rs"
repository = "https://github.com/gembleman/bareun_rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"
