[package]
name = "bareun_rs"
version = "1.7.2"
edition = "2024"
license = "BSD-3-Clause"
keywords = ["korean", "nlp", "tokenizer", "analyzer"]
categories = ["api-bindings", "text-processing"]
description = "an unofficial Rust library for Bareun, a Korean morphological analyzer"
build = "build.rs"
repository = "https://github.com/gembleman/bareun_rs"

[dependencies]
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"

[build-dependencies]
tonic-prost-build = "0.14"
